client/components/sidebar/sidebar.less
//////////////////////////////////////////////////////
// Visual appearance

.sidebar-nav {
  margin: 0;
  padding: 0;
  list-style: none;
}

.sidebar-nav li {
  text-indent: 20px;
  line-height: 40px;
}

.sidebar-nav li a {
  display: block;
  text-decoration: none;
  color: #999999;
}

.sidebar-nav li a:hover {
  text-decoration: none;
  color: #fff;
  background: rgba(255, 255, 255, 0.2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
  text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
  height: 65px;
  font-size: 18px;
  line-height: 60px;
}

.sidebar-nav > .sidebar-brand a {
  color: #999999;
}

.sidebar-nav > .sidebar-brand a:hover {
  color: #fff;
  background: none;
}

.sidebar-nav > li > a.active {
  color: white;
  font-weight: bold;
  background: darkslategrey;
}


//////////////////////////////////////////////////////
// Layout

.sidebar-container {
  width: 250px;
  overflow-y: auto;
  background: #000;
}

.sidebar-container-unpinned {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1010;
}

.sidebar-container-pinned {
  flex: none;
}

.sidebar-buttons {
  display: flex;
  flex-flow: row wrap;
  align-items: stretch;
  justify-content: space-between;

}

.sidebar-btn {
  flex: none;
}

.sidebar-pin-btn-clicked {
  transform: rotate(90deg);
}

//////////////////////////////////////////////////////
// Animation

.sidebar-container.ng-hide-add {
  animation: 0.5s slideOutLeft ease;
}

.sidebar-container.ng-hide-remove {
  animation: 0.5s slideInLeft ease;
}

